--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
     display: block;
 }
 
-#Wrap {
+#wrap {
     width : 100%;
 
     text-align: center;
@@ -25,7 +25,8 @@ body {
 }
 
 .links {
-    height : 300px;
+	width : 100%;
+	max-width : 800px;
 
     display: inline-block;
 
@@ -35,22 +36,37 @@ body {
 }
 
 .linkImg {
-    height : 300px;
+	width : 78.45%;
+
+    margin : 0;
+    padding : 0;
+}
+
+.linkImg3 {
+	width : 21.55%;
+
+    margin : 0;
+    padding : 0;
+}
+
+.linkImg4 {
+	width : 100%;
 
     margin : 0;
     padding : 0;
 }
 
 .linksChildWrap {
-    height : 300px;
+    width : 21.55%;
 
     display: inline-block;
+	vertical-align: top;
 }
 
 .linkImg2 {
-    height : 100px;
+    width : 100%;
 
-    display: block;
+    display: inline-block;
 }
 
 .text{
